Add sampler configuration